# Credit-card-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  create_db.py  docker-compose.yaml  get_api.py  localhost.crt  localhost.key  main.py  main_auth.py  main_balance.py  main_verify.py  prometheus.yaml  pyproject.toml  pytest.ini  setup.cfg  volume.yaml
alembic/: env.py
alembic/versions/: 0001_initial_migration.py  0002_balance_initial_migration.py  0003_add_test_data.py
config/: config.py  kafka_setup.py  postgres_adaptor.py  postgres_config.py
credit_card_auth/: cc_auth.json
credit_card_auth/src/: middlewares.py
credit_card_auth/tests/: conftest.py
credit_card_balance/: cc_balance.json
credit_card_balance/src/: middlewares.py
credit_card_balance/tests/: conftest.py
credit_card_verify/: cc_verify.json
db/additional_task/: additional_task_schemas
db/auth/: create_db.sql  db_schemas
db/balance/: balance_logs_CRUD.sql  cards_CRUD.sql  common_log_CRUD.sql  create_db.sql  db_schemas
docker/: Dockerfile-auth  Dockerfile-balance  Dockerfile-kafka  Dockerfile-verify  create-topics.sh  entrypoint.sh  healthcheck-kafka.sh  init-kafka.sh
docs/: cc_auth.yaml  cc_balance.yaml  cc_verify.yaml
gran-cc/: Chart.yaml  gran-cc-0.1.0.tgz  gran-cc-0.2.0.tgz  gran-cc-0.3.0.tgz  values.yaml
gran-cc/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  deployment_cc_auth.yaml  deployment_cc_balance.yaml  deployment_cc_verify.yaml  hpa.yaml  ingress.yaml  service.yaml  service_cc_auth.yaml  service_cc_balance.yaml  serviceaccount.yaml  volume.yaml
k8s/: ConfigMap.yaml  Secret.yaml  configmap.yaml  deployment_cc_auth.yaml  deployment_cc_balance.yaml  deployment_cc_verify.yaml  deplyment_cc_auth.yaml  job_alembic.yaml  secret.yaml  service_cc_auth.yaml  service_cc_balance.yaml  volume.yaml
src/: main.py
src/auth/: token.py
src/database/: database.py
src/models/: logs.py  user.py
src/repositories/: api_user_repository.py  log_storage.py  token.py  token_repository.py  transactions.py  user_storage.py
src/routers/: balance_router.py  token_router.py  transactions_router.py
src/schemas/: balance_schemas.py  log_schemas.py  transactions_schemas.py  user_schemas.py
src/services/: balance_service.py  handler_utils.py  (+2 more)
(+74 files in other folders)
