[tool.poetry]
name = "credit-card"
version = "0.2.0"
description = "credit card api"
authors = ["Andrey <megagran.work@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
wemake-python-styleguide = "^0.18.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
uvicorn = "^0.23.2"
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
linters = ['wemake-python-styleguide', 'mypy']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
