[tool.poetry]
name = "credit-card"
version = "0.2.0"
description = "credit card api"
authors = ["Andrey <megagran.work@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.103.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
wemake-python-styleguide = "^0.18.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
uvicorn = "^0.23.2"
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
h5py = "^3"
scipy = "^1.11"
tensorflow = "^2.10"
deepface = "^0.0.79"

[tool.poetry.dev-dependencies]
mypy = "^1.5.1"
wemake-python-styleguide = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
